--- a/frontend/app/styles/partials/welcome.scss
+++ b/frontend/app/styles/partials/welcome.scss
@@ -38,6 +38,21 @@ $color4: #ffa500;
   }
 }
 
+.welcome-text {
+  font-size: 1em;
+  font-weight: 600;
+  justify-content: center;
+  text-align: left;
+}
+
+.ui.segment.center-place {
+  bottom: 25%;
+  height: auto;
+  margin-left: 30%;
+  margin-right: 30%;
+  top: 25%;
+}
+
 @media screen and (max-width: 1800px) {
   .welcome-header {
     .content {
@@ -49,6 +64,10 @@ $color4: #ffa500;
         font-size: 1.2em;
       }
     }
+  }
+  .image {
+    width:160px;
+    height: 160px;
   }
 }
 
@@ -64,6 +83,10 @@ $color4: #ffa500;
       }
     }
   }
+  .image {
+    width:80px;
+    height: 80px;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -77,6 +100,17 @@ $color4: #ffa500;
         font-size: 1em;
       }
     }
+  }
+  .image {
+    width:60px;
+    height: 60px;
+  }
+  .welcome-text{
+    font-size: 0.8em;
+  }
+  .ui.segment.center-place {
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
 
@@ -95,21 +129,6 @@ $color4: #ffa500;
 
 .overlay-none {
   display: none;
-}
-
-.ui.segment.center-place {
-  bottom: 25%;
-  height: auto;
-  margin-left: 30%;
-  margin-right: 30%;
-  top: 25%;
-}
-
-.welcome-text {
-  font-size: 1.1em;
-  font-weight: 600;
-  justify-content: center;
-  text-align: left;
 }
 
 .visible-overlay {
