--- a/frontend/app/templates/components/overlay-welcome.hbs
+++ b/frontend/app/templates/components/overlay-welcome.hbs
@@ -3,7 +3,7 @@
     <div class="ui segment center-place">
         <div class="ui centered grid">
             <div class="row">
-                <img class="ui circular small image" src="{{user.photoURL}}">
+                <img class="ui circular image" src="{{user.photoURL}}">
             </div>
             <div class="row">
                 <p class="welcome-text">Welcome {{user.username}} to Badgeyay. Let's create some awesome badges.
