--- a/frontend/app/styles/partials/welcome.scss
+++ b/frontend/app/styles/partials/welcome.scss
@@ -38,6 +38,26 @@ $color4: #ffa500;
   }
 }
 
+.welcome-text {
+  font-size: 1em;
+  font-weight: 600;
+  justify-content: center;
+  text-align: left;
+}
+
+.ui.segment.center-place {
+  bottom: 25%;
+  height: auto;
+  margin-left: 30%;
+  margin-right: 30%;
+  top: 25%;
+}
+
+.image {
+  height: 120px;
+  width: 120px;
+}
+
 @media screen and (max-width: 1800px) {
   .welcome-header {
     .content {
@@ -49,6 +69,9 @@ $color4: #ffa500;
         font-size: 1.2em;
       }
     }
+  }
+  .welcome-text {
+    font-size: 1.5em;
   }
 }
 
@@ -64,9 +87,16 @@ $color4: #ffa500;
       }
     }
   }
+  .image {
+    height: 80px;
+    width: 80px;
+  }
+  .welcome-text {
+    font-size: 1em;
+  }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 700px) {
   .welcome-header {
     .content {
       .lead {
@@ -77,6 +107,17 @@ $color4: #ffa500;
         font-size: 1em;
       }
     }
+  }
+  .image {
+    height: 60px;
+    width: 60px;
+  }
+  .welcome-text {
+    font-size: 0.8em;
+  }
+  .ui.segment.center-place {
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
 
@@ -95,21 +136,6 @@ $color4: #ffa500;
 
 .overlay-none {
   display: none;
-}
-
-.ui.segment.center-place {
-  bottom: 25%;
-  height: auto;
-  margin-left: 30%;
-  margin-right: 30%;
-  top: 25%;
-}
-
-.welcome-text {
-  font-size: 1.1em;
-  font-weight: 600;
-  justify-content: center;
-  text-align: left;
 }
 
 .visible-overlay {
