Fetch Username & Email from Backend

--- a/frontend/app/templates/components/user-component/my-profile.hbs
+++ b/frontend/app/templates/components/user-component/my-profile.hbs
@@ -1,33 +1,31 @@
-<div class="my-profile">
-    <div class="ui internally celled grid">
-      <div class="four wide column">
-        <div class="ui small segment">
-            <div class="ui small circular image profile-image">
-                <img src="{{user.photoURL}}">
-                <input style="display: none;" id="profileImageSelector" type="file" onchange={{action "profileImageSelected"}}>
-                <div class="profile-change" onclick={{action "updateProfileImage"}}><b>Change</b></div>
-            </div>
+<div class="ui grid">
+  <div class="four wide column">
+    <div class="ui small segment">
+        <div class="ui small circular image profile-image">
+            <img src="{{user.photoURL}}">
+            <input style="display: none;" id="profileImageSelector" type="file" onchange={{action "profileImageSelected"}}>
+            <div class="profile-change" onclick={{action "updateProfileImage"}}><b>Change</b></div>
         </div>
-        <div class="ui segment">
-          <div class="ui vertical attached tabular menu">
-              <div class="active item" data-tab="account">
-                Account
-              </div>
-              <div class="item" data-tab="password">
-                Password
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="ten wide column">
-        <div class="ui active attached tab segment" data-tab="account">
-          {{user-component/user-account}}
-        </div>
-        <div class="ui attached tab segment" data-tab="password">
-          {{user-component/user-password}}
-        </div>
-      </div>
     </div>
+      <div class="ui vertical attached tabular menu">
+          <div class="active item" data-tab="account">
+            Account
+            <i class="ui angle right icon"></i>
+          </div>
+          <div class="item" data-tab="password">
+            Password
+            <i class="ui angle right icon"></i>
+          </div>
+      </div>
+  </div>
+  <div class="ten wide column">
+    <div class="ui active attached tab segment" data-tab="account">
+      {{user-component/user-account session=session user=user}}
+    </div>
+    <div class="ui attached tab segment" data-tab="password">
+      {{user-component/user-password}}
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript">
