--- a/frontend/app/templates/components/user-component/user-account.hbs
+++ b/frontend/app/templates/components/user-component/user-account.hbs
@@ -3,16 +3,16 @@
     <div class="field">
     <label>Username</label>
     <div class="fields">
-        <div class="ten wide field">
-        <input placeholder="Default User Name" type="text">
+        <div class="ten wide disabled field">
+        <input type="text" value={{user.username}}>
         </div>
     </div>
     </div>
     <div class="field">
     <label>Email</label>
     <div class="fields">
-        <div class="ten wide field">
-        <input placeholder="Default User Email" type="text">
+        <div class="ten wide disabled field">
+        <input type="text" value={{user.email}}>
         </div>
     </div>
     </div>
