Fixes #1149 : Added option to modify user details, delete user, delete and create admin

--- a/frontend/app/styles/partials/overrides.scss
+++ b/frontend/app/styles/partials/overrides.scss
@@ -13,6 +13,10 @@
   padding: 2%;
 }
 
+.description {
+  width: 100% !important;
+}
+
 @media screen and (max-width: 1500px) {
   .main-container {
     margin: 2% 0;
