--- a/frontend/app/templates/admin/permissions/system-roles.hbs
+++ b/frontend/app/templates/admin/permissions/system-roles.hbs
@@ -30,7 +30,7 @@
           </td>
           <td>
             <div class="ui horizontal compact basic buttons">
-              {{#ui-popup content='Delete' class='ui icon button'}}
+              {{#ui-popup content='Delete' class='ui icon button' click=(action 'deleteAdmin' admin.email)}}
                 <i class="trash alternate outline icon"></i>
               {{/ui-popup}}
             </div>
