--- a/frontend/app/templates/admin/users/list.hbs
+++ b/frontend/app/templates/admin/users/list.hbs
@@ -1,5 +1,9 @@
 <div class="ui grid user-grid">
-    {{user-table users=users}}
+    <div class="row">
+        <div class="sixteen wide column">
+            {{user-table users=users}}
+        </div>
+    </div>
     <div class="row">
         <div class="column">
             <div onclick={{action 'prevPage'}}>
