Fixes #1152: Fix welcome overlay ui issues (#1154)

--- a/frontend/app/templates/components/overlay-welcome.hbs
+++ b/frontend/app/templates/components/overlay-welcome.hbs
@@ -3,7 +3,7 @@
     <div class="ui segment center-place">
         <div class="ui stackable centered grid">
             <div class="row">
-                <img class="ui circular small image" src="{{user.photoURL}}">
+                <img class="ui circular image" src="{{user.photoURL}}">
             </div>
             <div class="row">
                 <h2 class="ui center aligned header welcome-text">
