Fixes #1136 : Added mail statisics on index admin page

--- a/frontend/app/templates/admin/index.hbs
+++ b/frontend/app/templates/admin/index.hbs
@@ -42,21 +42,25 @@
                         <tr>
                             <td> In last 24 hours</td>
                             <td class="right aligned">
+                                {{model.mails.lastDayCount}}
                             </td>
                         </tr>
                         <tr>
                             <td>In last 3 days</td>
                             <td class="right aligned">
+                                {{model.mails.lastThreeDays}}
                             </td>
                         </tr>
                         <tr>
                             <td> In last 7 days </td>
                             <td class="right aligned">
+                                {{model.mails.lastSevenDays}}
                             </td>
                         </tr>
                         <tr>
                             <td> In last 1 month </td>
                             <td class="right aligned">
+                                {{model.mails.lastMonth}}
                             </td>
                         </tr>
                     </tbody>
