--- a/frontend/app/templates/admin.hbs
+++ b/frontend/app/templates/admin.hbs
@@ -10,8 +10,8 @@
       {{#link-to 'admin.permissions' class='item'}}
         {{'Permissions'}}
       {{/link-to}}
-      {{#link-to 'admin.mail' class='item'}}
-        {{'Mail'}}
+      {{#link-to 'admin.roles' class='item'}}
+        {{'Roles'}}
       {{/link-to}}
       {{#link-to 'admin.reports' class='item'}}
         {{'Reports'}}
