--- a/frontend/app/styles/partials/welcome.scss
+++ b/frontend/app/styles/partials/welcome.scss
@@ -120,3 +120,18 @@ $color4: #ffa500;
 .visible-overlay {
   display: block;
 }
+
+.ui.segment.center-place {
+  bottom: 25%;
+  height: auto;
+  margin-left: 30%;
+  margin-right: 30%;
+  top: 25%;
+
+  .welcome-text {
+    font-size: 1.1em;
+    font-weight: 600;
+    justify-content: center;
+    text-align: left;
+  }
+}
