Fixes #1185 : Added module component on terms of open evnt

--- a/frontend/app/templates/admin.hbs
+++ b/frontend/app/templates/admin.hbs
@@ -16,6 +16,9 @@
       {{#link-to 'admin.reports' class='item'}}
         {{'Reports'}}
       {{/link-to}}
+      {{#link-to 'admin.modules' class='item'}}
+        {{'Modules'}}
+      {{/link-to}}
       {{#link-to 'admin.settings' class='item'}}
         {{'Settings'}}
       {{/link-to}}
