Fixes #1207 : Added all-badges in admin panel

--- a/frontend/app/templates/admin.hbs
+++ b/frontend/app/templates/admin.hbs
@@ -10,6 +10,9 @@
       {{#link-to 'admin.permissions' class='item'}}
         {{'Permissions'}}
       {{/link-to}}
+      {{#link-to 'admin.badges' class='item'}}
+        {{'Badges'}}
+      {{/link-to}}
       {{#link-to 'admin.reports' class='item'}}
         {{'Reports'}}
       {{/link-to}}
